	
Tu Jan 24 10:59:21 CET 2006

	- Synced parser and keyword list.
	- Added another test case.
	
Sa Feb  4 21:35:03 CET 2006

	- Added C bit fields to ecpg parser.
	- Added some default rules to lexer.
	- Added log output to prepare statement.
	
Mo Feb  6 21:21:19 CET 2006

	- Added just another test case.
	- Fixed missing continuation line character.
	- Do not translate $-quoting.
	
Tu Feb  7 18:48:14 CET 2006

	- Bit field notation belongs to a variable not a variable list.
	- Output of line number only done by one function.

Fri, 17 Mar 2006 16:38:19 +0100

	- Fixed bug 2330: Wrong error code in case of a duplicate key.

Mo Apr 24 11:40:05 CEST 2006

	- Fixed memory leak bugs found by Martijn Oosterhout.

We Mai 31 10:10:36 CEST 2006

	- Fixed PGTYPESdate_from_timestamp because some characters got lost there.

Tu Jun  6 12:09:56 CEST 2006

	- Fixed two more memory leaks in ecpglib.
	- Synced parser.

Mo Jun 19 11:15:50 CEST 2006

	- Do not use already free'ed errmsg, bug found by Joachim Wieland
	  <joe@mcknight.de>.

We Jun 21 09:24:53 CEST 2006

	- Added fixes from the coverity report send in by Joachim Wieland
	  <joe@mcknight.de>.
	- Added missing error handling in a few functions in ecpglib.

we Jun 21 13:37:00 CEST 2006

	- Added some more coverity report patches send in by Martijn van
	  Oosterhout <kleptog@svana.org>.

Su Jun 25 11:27:46 CEST 2006

	- Moved some free() calls that coverity correctly complains about.

Mo Jun 26 11:05:25 CEST 2006

	- Added some more coverity report patches send in by Joachim Wieland
	  <joe@mcknight.de>.

Mo Jun 26 16:08:23 CEST 2006

	- Added missing braces to prevent a segfault after usage of an
	  undeclared cursor.

We Jul  5 12:17:28 CEST 2006

	- Fixed remaining Coverity bugs.

Fr Jul 28 11:00:51 CEST 2006

	- Added more SoC changes by Joachim Wieland <joe@mcknight.de>:
		- SHOW statement puts result into a variable
		- COPY TO STDOUT works
	- Set ecpg library version to 5.2.
	- Set ecpg version to 4.2.1.