@@ -2050,5 +2050,6 @@ Fr Jul 28 11:00:51 CEST 2006
 	- Added more SoC changes by Joachim Wieland <joe@mcknight.de>:
 		- SHOW statement puts result into a variable
 		- COPY TO STDOUT works
+		- Connection identifier has to be unique
 	- Set ecpg library version to 5.2.
 	- Set ecpg version to 4.2.1.
